# csharp-class-diagram-generator

./: LICENSE  README.md  pyproject.toml
src/cscdg/: __init__.py  enums.py  patterns.py  utils.py
src/cscdg/cli/: __init__.py
src/cscdg/models/: __init__.py  abc.py  clazz.py  method.py  namespace.py  parameter.py  pretty_print_mixin.py  project.py  property.py  relation.py
